--- a/VAKidney/app/build.gradle
+++ b/VAKidney/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     final FDA_BASE_URL = "https://api.fda.gov/"
-    final NDB_BASE_URL = "https://api.nal.usda.gov/ndb/"
+    final NDB_BASE_URL = "https://api.nal.usda.gov/"
     final FDA_API_KEY = "M19F7ValXdbz2jGtnLIEG77VgNyw4TQS4JXOY6hW"
     final NDB_API_KEY = "RRsuimKHTOocPYhmzonbv03mIqN3CB7OGzaQtvlE"
 
@@ -17,7 +17,6 @@ android {
     }
     buildTypes {
         debug {
-            applicationIdSuffix '.debug'
             minifyEnabled false
             buildConfigField 'String', 'FDA_BASE_URL', "\"" + FDA_BASE_URL + "\""
             buildConfigField 'String', 'NDB_BASE_URL', "\"" + NDB_BASE_URL + "\""
