--- a/VAKidney/app/src/main/AndroidManifest.xml
+++ b/VAKidney/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.topcoder.vakidney">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,16 @@
         android:name="com.orm.SugarApp"
         tools:replace="android:icon,android:label"
         android:theme="@style/AppTheme">
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
 
         <meta-data android:name="DATABASE" android:value="va_data.db" />
         <meta-data android:name="VERSION" android:value="1" />
