Working on Functionality Challenge.

--- a/VAKidney/app/src/main/AndroidManifest.xml
+++ b/VAKidney/app/src/main/AndroidManifest.xml
@@ -28,9 +28,9 @@
         </provider>
 
         <meta-data android:name="DATABASE" android:value="va_data.db" />
-        <meta-data android:name="VERSION" android:value="1" />
+        <meta-data android:name="VERSION" android:value="2" />
         <meta-data android:name="QUERY_LOG" android:value="false" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.topcoder.vakidney.Model" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.topcoder.vakidney.model" />
 
         <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
