--- a/VAKidney/app/src/main/AndroidManifest.xml
+++ b/VAKidney/app/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name="com.orm.SugarApp"
-        tools:replace="android:icon,android:label"
+        tools:replace="android:icon,android:label,android:allowBackup"
         android:theme="@style/AppTheme">
 
         <provider
