--- a/VAKidney/app/src/main/AndroidManifest.xml
+++ b/VAKidney/app/src/main/AndroidManifest.xml
@@ -8,15 +8,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name="com.orm.SugarApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name="com.orm.SugarApp"
-        tools:replace="android:icon,android:label,android:allowBackup"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon,android:label,android:allowBackup">
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -24,29 +23,57 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
 
-        <meta-data android:name="DATABASE" android:value="va_data.db" />
-        <meta-data android:name="VERSION" android:value="2" />
-        <meta-data android:name="QUERY_LOG" android:value="false" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.topcoder.vakidney.model" />
+        <meta-data
+            android:name="DATABASE"
+            android:value="va_data.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="2" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="false" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="com.topcoder.vakidney.model" />
 
-        <activity android:name=".MainActivity" android:screenOrientation="portrait">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WelcomeActivity" android:screenOrientation="portrait" />
-        <activity android:name=".LoginActivity" android:screenOrientation="portrait" />
-        <activity android:name=".ResourcesDetailActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".AddNewMealActivity" android:screenOrientation="portrait" />
-        <activity android:name=".AddNewGoalActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ChartActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ComorbiditiesActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".RegisterActivity" android:screenOrientation="portrait" />
+        <activity
+            android:name=".WelcomeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ResourcesDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AddNewMealActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AddNewGoalActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ChartActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ComorbiditiesActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".SetProfileActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
