Issue 85 - Distance and Steps are not sync with the Google Fit
The Google Fitness API has to be enabled in order to work with Google Fitness API. I enabled it on my personal account for this debug build. But you’ll need to setup the fitness api on the VaKidney administrator google account. The steps are available here: https://developers.google.com/fit/android/get-started.

With the changes in this commit and the Google Fit api setup, this issue is fixed.

Please do a fresh install to test this issue.

--- a/VAKidney/app/build.gradle
+++ b/VAKidney/app/build.gradle
@@ -18,6 +18,7 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
+            signingConfig signingConfigs.debug
             buildConfigField 'String', 'FDA_BASE_URL', "\"" + FDA_BASE_URL + "\""
             buildConfigField 'String', 'NDB_BASE_URL', "\"" + NDB_BASE_URL + "\""
             buildConfigField 'String', 'FDA_API_KEY', "\"" + FDA_API_KEY + "\""
@@ -30,6 +31,15 @@ android {
             buildConfigField 'String', 'NDB_BASE_URL', "\"" + NDB_BASE_URL + "\""
             buildConfigField 'String', 'FDA_API_KEY', "\"" + FDA_API_KEY + "\""
             buildConfigField 'String', 'NDB_API_KEY', "\"" + NDB_API_KEY + "\""
+        }
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file("config/keystore/debug/vakidney_debug.keystore")
+            storePassword "vakidney"
+            keyAlias "vakidney_debug"
+            keyPassword "vakidney"
         }
     }
     dataBinding {
